# fancy-ip

./: Cargo.toml  LICENSE  README.md
src/: arg_parser.rs  lib.rs
