[package]
name = "fancy-ip"
description = "Fanciest way to initialize IP addresses"
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/citorva/fancy-ip"
keywords = ["ip", "initialization", "macro", "readability", "helper"]
categories = ["rust-patterns"]

[lib]
proc-macro=true

[features]
default = ["std"]
std = []

[dependencies]
# Used to emit warnings and error in the compiler logs
proc-macro-error = { version = "1", default-features = false }
litrs = { version = "0.4", default-features = false }